[B]Version 0.9.20:[/B] - (12/18/2016)
- default.py: Gaining updated URL domains to kissanime.ru
- config.py: Gaining updated URL domains to kissanime.ru
- teh_tools.py: Gaining updated URL domain to kissanime.ru


[B]Note:[/B]  IRC Chat Channel: #The_Projects @ irc.snoonet.org:6667

[B]Version 0.9.19[/B] - (05/02/2016)
- default.py: FavoritesSQL_List(...): Added some on-the-fly fixing for old domains with: "http://", "kissanime.com", "kissanime.me".  This does not fix EVERY instance of the old urls
- default.py: History201(...): Slight adjustments made for similar reasons, without an sql update fix.
- default.py: History101a(...): Slight adjustments made for similar reasons, without an sql update fix.
- default.py: History101(...): Slight adjustments made for similar reasons, without an sql update fix.

[B]Version 0.9.18[/B] - (04/30/2016)
- config.py: Changed "http://" to "https://".  This fixed the login issue.

[B]Version 0.9.18[/B] - (03/25/2016)
- default.py: function listLinks(...): Link Method #8 added. (stream)
- settings.xml: Additional options....

[B]Version 0.9.17[/B] - (03/07/2016)
- default.py: function listLinks(...): Link Method #7 added.
- default.py: function PlayVideo(...): Attemping to make use of UrlResolver.
- settings.xml: Updated information for Method #7.
- addon.xml: Added requirement for UrlResolver.
- Waiting to see how things go for a bit....

[B]Version 0.9.16[/B] - (02/25/2016)
- Fixes done on Kodi 16.0.x Jarvis.  Found that print statements were no longer writing to kodi.log, so did a bit of tweaking to make use of xbmc.log(...).
- Attempts to figure out what`s going on with the login system.  Nothing much yet.
- teh_tools.py: function Check_Login(): fixed hasPassword_Cookie check.

[B]Version 0.9.15[/B] - (11/19/2015)
- default.py: function listItems_Upcoming(...): some html code filtering additions to the plot description.

[B]Version 0.9.14[/B] - (11/15/2015)