@@ -1,3 +1,6 @@
+[B]Version 0.9.21:[/B] - (1/8/2017)
+- teh_tools.py: gaining added support for Kodi 17 (krypton)
+
 [B]Version 0.9.20:[/B] - (12/18/2016)
 - default.py: Gaining updated URL domains to kissanime.ru
 - config.py: Gaining updated URL domains to kissanime.ru
